[gd_scene load_steps=6 format=3 uid="uid://dcm3k7i0ktfkt"]

[ext_resource type="Script" uid="uid://dmvtu0vmbrdqj" path="res://scripts/ui/combat_page.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_shield_bg"]
bg_color = Color(0.1, 0.1, 0.2, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_shield_fill"]
bg_color = Color(0, 0.8, 1, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hp_bg"]
bg_color = Color(0.2, 0.1, 0.1, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hp_fill"]
bg_color = Color(1, 0.3, 0.3, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="CombatPage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_script")

[node name="Dashboard" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Visualizer" type="Control" parent="Dashboard"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Background" type="Control" parent="Dashboard/Visualizer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="RadarLines" type="Control" parent="Dashboard/Visualizer/Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="RadarDisplay" type="Control" parent="Dashboard/Visualizer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HUD" type="MarginContainer" parent="Dashboard/Visualizer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 80

[node name="Overlays" type="Control" parent="Dashboard/Visualizer/HUD"]
layout_mode = 2
mouse_filter = 2

[node name="SectorOverlay" type="PanelContainer" parent="Dashboard/Visualizer/HUD/Overlays"]
custom_minimum_size = Vector2(250, 320)
layout_mode = 0
offset_right = 250.0
offset_bottom = 320.0
mouse_filter = 2

[node name="VBox" type="VBoxContainer" parent="Dashboard/Visualizer/HUD/Overlays/SectorOverlay"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 8

[node name="Header" type="Label" parent="Dashboard/Visualizer/HUD/Overlays/SectorOverlay/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.737255, 0.831373, 1)
theme_override_font_sizes/font_size = 12
text = "[ NAV / SHIP STATUS ]"
horizontal_alignment = 1

[node name="PlayerStats" type="VBoxContainer" parent="Dashboard/Visualizer/HUD/Overlays/SectorOverlay/VBox"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 2

[node name="NameLabel" type="Label" parent="Dashboard/Visualizer/HUD/Overlays/SectorOverlay/VBox/PlayerStats"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.737255, 0.831373, 1)
theme_override_font_sizes/font_size = 14
text = "USS Horizon"

[node name="StatsLabel" type="Label" parent="Dashboard/Visualizer/HUD/Overlays/SectorOverlay/VBox/PlayerStats"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 11
text = "ATK: 0 | DEF: 0"

[node name="HealthLabel" type="Label" parent="Dashboard/Visualizer/HUD/Overlays/SectorOverlay/VBox/PlayerStats"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 10
text = "HULL: 0 / 0"

[node name="ShieldLabel" type="Label" parent="Dashboard/Visualizer/HUD/Overlays/SectorOverlay/VBox/PlayerStats"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.8, 1, 1)
theme_override_font_sizes/font_size = 10
text = "SHD: 0 / 0"

[node name="WeaponBattery" type="VBoxContainer" parent="Dashboard/Visualizer/HUD/Overlays/SectorOverlay/VBox/PlayerStats"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="BuffContainer" type="HBoxContainer" parent="Dashboard/Visualizer/HUD/Overlays/SectorOverlay/VBox/PlayerStats"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 4

[node name="HSeparator" type="HSeparator" parent="Dashboard/Visualizer/HUD/Overlays/SectorOverlay/VBox"]
layout_mode = 2

[node name="ZoneList" type="ItemList" parent="Dashboard/Visualizer/HUD/Overlays/SectorOverlay/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="TargetingOverlay" type="PanelContainer" parent="Dashboard/Visualizer/HUD/Overlays"]
custom_minimum_size = Vector2(250, 320)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -250.0
offset_bottom = 320.0
grow_horizontal = 0
mouse_filter = 2

[node name="VBox" type="VBoxContainer" parent="Dashboard/Visualizer/HUD/Overlays/TargetingOverlay"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 8

[node name="Header" type="Label" parent="Dashboard/Visualizer/HUD/Overlays/TargetingOverlay/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.321569, 0.321569, 1)
theme_override_font_sizes/font_size = 12
text = "[ TARGETING DATA ]"
horizontal_alignment = 1

[node name="EnemyStats" type="VBoxContainer" parent="Dashboard/Visualizer/HUD/Overlays/TargetingOverlay/VBox"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 2

[node name="NameLabel" type="Label" parent="Dashboard/Visualizer/HUD/Overlays/TargetingOverlay/VBox/EnemyStats"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.321569, 0.321569, 1)
theme_override_font_sizes/font_size = 14
text = "Target Acquired"
horizontal_alignment = 2

[node name="StatsLabel" type="Label" parent="Dashboard/Visualizer/HUD/Overlays/TargetingOverlay/VBox/EnemyStats"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 11
text = "DNG: 0 | DEF: 0"
horizontal_alignment = 2

[node name="HealthLabel" type="Label" parent="Dashboard/Visualizer/HUD/Overlays/TargetingOverlay/VBox/EnemyStats"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 10
text = "HULL: 0 / 0"
horizontal_alignment = 2

[node name="ShieldLabel" type="Label" parent="Dashboard/Visualizer/HUD/Overlays/TargetingOverlay/VBox/EnemyStats"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.8, 1, 1)
theme_override_font_sizes/font_size = 10
text = "SHD: 0 / 0"
horizontal_alignment = 2

[node name="E_AttackBar" type="ProgressBar" parent="Dashboard/Visualizer/HUD/Overlays/TargetingOverlay/VBox/EnemyStats"]
custom_minimum_size = Vector2(0, 3)
layout_mode = 2
value = 50.0
show_percentage = false

[node name="HSeparator" type="HSeparator" parent="Dashboard/Visualizer/HUD/Overlays/TargetingOverlay/VBox"]
layout_mode = 2

[node name="Scroll" type="ScrollContainer" parent="Dashboard/Visualizer/HUD/Overlays/TargetingOverlay/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="EnemyList" type="VBoxContainer" parent="Dashboard/Visualizer/HUD/Overlays/TargetingOverlay/VBox/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="CenterInfo" type="VBoxContainer" parent="Dashboard/Visualizer/HUD"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
mouse_filter = 2

[node name="SectorThreat" type="Label" parent="Dashboard/Visualizer/HUD/CenterInfo"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.843137, 0, 0.501961)
theme_override_font_sizes/font_size = 10
text = "SECTOR THREAT: NOMINAL"
horizontal_alignment = 1

[node name="ScanningStatus" type="Label" parent="Dashboard/Visualizer/HUD/CenterInfo"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.8, 1, 0.392157)
theme_override_font_sizes/font_size = 9
text = "SCANNING FOR ANOMALIES..."
horizontal_alignment = 1

[node name="BottomRegion" type="VBoxContainer" parent="Dashboard/Visualizer/HUD/Overlays"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -140.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
theme_override_constants/separation = 10

[node name="StatusRow" type="HBoxContainer" parent="Dashboard/Visualizer/HUD/Overlays/BottomRegion"]
layout_mode = 2
mouse_filter = 2

[node name="AmmoOverlay" type="PanelContainer" parent="Dashboard/Visualizer/HUD/Overlays/BottomRegion/StatusRow"]
custom_minimum_size = Vector2(160, 110)
layout_mode = 2
mouse_filter = 2

[node name="VBox" type="VBoxContainer" parent="Dashboard/Visualizer/HUD/Overlays/BottomRegion/StatusRow/AmmoOverlay"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 2

[node name="Header" type="Label" parent="Dashboard/Visualizer/HUD/Overlays/BottomRegion/StatusRow/AmmoOverlay/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.4, 0, 1)
theme_override_font_sizes/font_size = 9
text = "[ AMMUNITION STATUS ]"
horizontal_alignment = 1

[node name="AmmoGroupVBox" type="VBoxContainer" parent="Dashboard/Visualizer/HUD/Overlays/BottomRegion/StatusRow/AmmoOverlay/VBox"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/separation = 4

[node name="Spacer" type="Control" parent="Dashboard/Visualizer/HUD/Overlays/BottomRegion/StatusRow"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="ScannerOverlay" type="PanelContainer" parent="Dashboard/Visualizer/HUD/Overlays/BottomRegion/StatusRow"]
custom_minimum_size = Vector2(160, 110)
layout_mode = 2
mouse_filter = 2

[node name="VBox" type="VBoxContainer" parent="Dashboard/Visualizer/HUD/Overlays/BottomRegion/StatusRow/ScannerOverlay"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 2

[node name="Header" type="Label" parent="Dashboard/Visualizer/HUD/Overlays/BottomRegion/StatusRow/ScannerOverlay/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.8, 1, 1)
theme_override_font_sizes/font_size = 9
text = "[ EXPEDITION YIELD ]"
horizontal_alignment = 1

[node name="LootText" type="RichTextLabel" parent="Dashboard/Visualizer/HUD/Overlays/BottomRegion/StatusRow/ScannerOverlay/VBox"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/default_color = Color(0.196078, 0.8, 0.196078, 1)
theme_override_font_sizes/normal_font_size = 9
bbcode_enabled = true
text = "[center]Searching for loot paths...[/center]"
fit_content = true

[node name="LogOverlay" type="PanelContainer" parent="Dashboard/Visualizer/HUD/Overlays/BottomRegion"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
mouse_filter = 2

[node name="VBox" type="VBoxContainer" parent="Dashboard/Visualizer/HUD/Overlays/BottomRegion/LogOverlay"]
layout_mode = 2
mouse_filter = 2

[node name="Header" type="Label" parent="Dashboard/Visualizer/HUD/Overlays/BottomRegion/LogOverlay/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 0.5)
theme_override_font_sizes/font_size = 9
text = "  > TACTICAL DIAGNOSTIC FEED"

[node name="LogList" type="ItemList" parent="Dashboard/Visualizer/HUD/Overlays/BottomRegion/LogOverlay/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.666667, 0.666667, 0.666667, 0.5)
theme_override_font_sizes/font_size = 10

[node name="ViewportFooter" type="PanelContainer" parent="Dashboard"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -42.0
grow_horizontal = 2
grow_vertical = 0

[node name="Margin" type="MarginContainer" parent="Dashboard/ViewportFooter"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="HBox" type="HBoxContainer" parent="Dashboard/ViewportFooter/Margin"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="RetreatBtn" type="Button" parent="Dashboard/ViewportFooter/Margin/HBox"]
custom_minimum_size = Vector2(100, 32)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.352941, 0.352941, 1)
text = "RETREAT"

[node name="ConsoleSpacer" type="Control" parent="Dashboard/ViewportFooter/Margin/HBox"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="ConsumableBay" type="HBoxContainer" parent="Dashboard/ViewportFooter/Margin/HBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SelectionLabel" type="Label" parent="Dashboard/ViewportFooter/Margin/HBox/ConsumableBay"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.4, 0.4, 1)
theme_override_font_sizes/font_size = 10
text = "BAY SLOT:"
vertical_alignment = 1

[node name="OptionButton" type="OptionButton" parent="Dashboard/ViewportFooter/Margin/HBox/ConsumableBay"]
custom_minimum_size = Vector2(140, 32)
layout_mode = 2

[node name="UseBtn" type="Button" parent="Dashboard/ViewportFooter/Margin/HBox/ConsumableBay"]
custom_minimum_size = Vector2(80, 32)
layout_mode = 2
text = "USE"

[node name="AutoToggle" type="Button" parent="Dashboard/ViewportFooter/Margin/HBox/ConsumableBay"]
custom_minimum_size = Vector2(60, 32)
layout_mode = 2
toggle_mode = true
text = "AUTO"

[node name="ScanLine" type="ColorRect" parent="Dashboard/Visualizer"]
modulate = Color(1, 1, 1, 0.05)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 2.0
grow_horizontal = 2
mouse_filter = 2

[connection signal="item_selected" from="Dashboard/Visualizer/HUD/Overlays/SectorOverlay/VBox/ZoneList" to="." method="_on_zone_list_item_selected"]
[connection signal="pressed" from="Dashboard/ViewportFooter/Margin/HBox/RetreatBtn" to="." method="_on_retreat_btn_pressed"]
[connection signal="item_selected" from="Dashboard/ViewportFooter/Margin/HBox/ConsumableBay/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="Dashboard/ViewportFooter/Margin/HBox/ConsumableBay/UseBtn" to="." method="_on_use_btn_pressed"]
[connection signal="toggled" from="Dashboard/ViewportFooter/Margin/HBox/ConsumableBay/AutoToggle" to="." method="_on_auto_btn_toggled"]
